macros/tests/ui/multipart_nested_non_path_type.rs
use axum_typed_multipart::TryFromMultipart;

#[derive(TryFromMultipart)]
struct Data {
    #[form_data(nested)]
    inner: &'static str,
}

fn main() {}
